--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class="card">
         <h2>Background</h2>
         <p>I'm a Front-End Web Developer who has a passion for Web technology. I live in Nashville, TN and I love my city. I'm seeing more and more tech come to Nashville, and I can't wait to be a part of it.</p>
-        <p>I can't wait to build something that impacts my city in a positive way!</p>
+        <p>I want to work hard to build something that impacts my city in a positive way!</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to improve my Developer skills listed below:</p>
+        <p>I already have some developer skills, but I want to improve my Developer skills listed below:</p>
         <ul class="skills">
           <li>CSS3</li>
           <li>JavaScript</li>
@@ -39,7 +39,7 @@
           <li>Dot Net</li>
           <li>Azure</li>
         </ul>
-        <p>I'd like to work for a Web Design firm but eventually start my own company.</p>
+        <p>I'd like to work for a Web Design firm but eventually start my own company creating websites and web applications that positively impact humanity.</p>
       </div> 
 
     </main>
