--- a/interests.html
+++ b/interests.html
@@ -23,11 +23,12 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <div class="wide-card">
         <h2>Interests</h2>
-        <p>Hello again! My name is Tommy - and I'd like to talk about my interests. Most of them lie in the technology fields, to be honest. So let's list them out so we can have a chat!:</p>
+        <p>Hello again! My name is Tommy - and I'd like to talk about my interests. Most of which have been strong passions for many years and they are also in the technology field. That may say something about my character and explain why I have such a love for coding and seeing the world advance through technology. So let's list them out so we can have a chat!:</p>
         <ul>
-            <li>Programming</li>
+            <li>Raspberry Pi</li>
+            <li>IoT (Internet of Things)</li>
             <li>Podcasts</li>
             <li>Audo and Video</li>
             <li>App Development</li>
