final commit probs
Final commit before turning in project

--- a/interests.html
+++ b/interests.html
@@ -13,6 +13,7 @@
           <li class="name">Tommy Chapman</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="interests.html">Interests</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
@@ -25,6 +26,7 @@
     <main class="flex">
       <div class="wide-card">
         <h2>Interests</h2>
+        <img class="hobbies-pic" src="images/podcast.jpg" width=300 alt="a picture of a microphone">
         <p>Hello again! My name is Tommy - and I'd like to talk about my interests. Most of which have been strong passions for many years and they are also in the technology field. That may say something about my character and explain why I have such a love for coding and seeing the world advance through technology. So let's list them out so we can have a chat!:</p>
         <ul>
             <li>Raspberry Pi</li>
